--- a/src/components/Aside.scss
+++ b/src/components/Aside.scss
@@ -21,4 +21,69 @@
     border-radius: 5px;
     padding: 0.75rem;
   }
+  @media screen and (max-width: 1448px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    height: max-content;
+    min-height: 350px;
+    div {
+      height: 85%;
+      width: 90%;
+    }
+  }
+  @media screen and (max-width: 1120px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    height: max-content;
+    min-height: 350px;
+    div {
+      height: 85%;
+      width: 90%;
+    }
+  }
+  @media screen and (max-width: 920px) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: max-content;
+    min-height: 350px;
+    div {
+      height: 85%;
+      width: 90%;
+    }
+  }
+  @media screen and (max-width: 720px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    height: max-content;
+    min-height: 650px;
+    div {
+      height: 85%;
+      width: 90%;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+    height: max-content;
+    min-height: 650px;
+    div {
+      height: 85%;
+      width: 90%;
+    }
+  }
 }
