--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -25,9 +25,8 @@
   }
   .title__container {
     text-decoration: none;
-    text-align: right; // Align placeholder text to the right
+    text-align: center; // Align placeholder text to the right
     justify-self: center;
-    margin-right: 1rem;
     font-family: digikala;
     font-size: 22px;
     color: var(--navy-light);
