--- a/src/components/LinkBox.scss
+++ b/src/components/LinkBox.scss
@@ -1,4 +1,4 @@
-.linkBox__container {
+.linkBox__container_hero {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,7 +26,7 @@
   }
 }
 
-.logo__container {
+.logo__container_hero {
   display: flex;
   flex-direction: row;
   position: relative;
@@ -57,8 +57,99 @@
         font-size: 0.8rem;
       }
       @media screen and (max-width: 500px) {
-        font-size: 0.5rem;
+        font-size: 0.65rem;
       }
+    }
+  }
+}
+
+.link__container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 10rem;
+  margin-top: 2rem;
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    margin: 0.5rem;
+    color: var(--navy-navbar);
+    font-family: "yekan";
+    font-size: 24px;
+    direction: rtl;
+  }
+  .search_input {
+    margin-left: 3rem;
+    font-size: 18px;
+    color: var(--navy-navbar);
+    outline: none;
+  }
+  .search_input:focus {
+    border: unset;
+    border: 2px solid var(--navy-light);
+  }
+  .linkbox__searchform {
+    display: flex;
+
+    input {
+      border: none;
+      border-radius: 5px;
+      width: 100%;
+      height: 55px;
+      // max-width: 780px;
+      background-color: var(--primary-white);
+      &::placeholder {
+        text-align: left; // Align placeholder text to the right
+        justify-self: center;
+        margin-left: 8rem;
+        padding: 1rem;
+        font-family: digikala;
+        font-size: 18px;
+        color: var(--navy-light2);
+      }
+    }
+    button {
+      position: absolute;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px 0 0 5px;
+      width: 55px;
+      height: 55px;
+      background-color: var(--primary-yellow);
+      svg {
+        width: 70%;
+        height: 70%;
+      }
+      &:hover {
+        svg {
+          width: 80%;
+          height: 80%;
+        }
+      }
+    }
+  }
+}
+
+.description__container {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: right;
+  justify-content: right;
+  height: 10rem;
+  margin-top: 0rem;
+  direction: rtl;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: right;
+    font-family: yekan;
+    color: var(--navy-navbar);
+    p {
+      color: var(--navy-light);
+      margin-top: 0.75rem;
     }
   }
 }
