top products done

--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,12 @@
   --navy-navbar: #232f3f;
   --navy-light: #232f3f7e;
   --navy-light2: #232f3f3a;
-  --blue-light: #0e2a4f;
+  --blue-light: #154078;
+  --blue-light2: #0e2a4f;
   --primary-white: #ffffffda;
   --primary-yellow: #febd69;
   --persian-lightblue: #6f9cc992;
+ 
 }
 
 @font-face {
