--- a/src/components/Aside.scss
+++ b/src/components/Aside.scss
@@ -13,8 +13,12 @@
   margin-top: 0.5rem;
   background: linear-gradient(to bottom, #a9d0d7f2, #a9d0d70c);
   border-radius: 5px;
-  div {
+  .box1,
+  .box2 {
+    position: relative;
     height: 50%;
+    min-height: 300px;
+    max-height: 300px;
     width: 90%;
     background-color: white;
     margin: 1rem;
@@ -24,8 +28,7 @@
   @media screen and (max-width: 1448px) {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+
     width: 60%;
     height: max-content;
     min-height: 350px;
@@ -37,8 +40,7 @@
   @media screen and (max-width: 1120px) {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+
     width: 70%;
     height: max-content;
     min-height: 350px;
@@ -48,10 +50,6 @@
     }
   }
   @media screen and (max-width: 920px) {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     width: 80%;
     height: max-content;
     min-height: 350px;
@@ -61,12 +59,9 @@
     }
   }
   @media screen and (max-width: 720px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 70%;
     height: max-content;
+    flex-direction: column;
     min-height: 650px;
     div {
       height: 85%;
@@ -74,10 +69,6 @@
     }
   }
   @media screen and (max-width: 500px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     width: 95%;
     height: max-content;
     min-height: 650px;
