--- a/src/pages/home/HomePage.scss
+++ b/src/pages/home/HomePage.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-color: rgb(255, 255, 255);
+  height: auto;
+  background-color: rgba(228, 228, 228, 0.648);
   display: flex;
   color: black;
   div {
