--- a/src/components/AsideRight.scss
+++ b/src/components/AsideRight.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 25%;
   height: 66%;
   min-height: 650px;
@@ -14,11 +14,44 @@
   background: linear-gradient(to bottom, #a9d0d7f2, #a9d0d70c);
   border-radius: 5px;
 
+  .rightAside_title {
+    width: 100%;
+    text-decoration: none;
+    text-align: center; // Align placeholder text to the right
+    justify-self: center;
+    font-family: digikala;
+    font-size: 24px;
+    margin-top: 0.5rem;
+    color: var(--navy-light);
+  }
+
   .ad__container {
     height: 90%;
     width: 90%;
+    min-height: 550px;
+    max-height: 600px;
+    top: 0;
+    overflow: hidden;
     background-color: white;
     margin: 1rem;
+    margin-top: 0;
     border-radius: 5px;
+  }
+
+  @media screen and (max-width: 480px) {
+    width: 95%;
+    margin-right: 0px;
+  }
+  @media screen and (max-width: 720px) {
+    width: 85%;
+    margin-right: 0px;
+  }
+  @media screen and (max-width: 980px) {
+    width: 75%;
+    margin-right: 0px;
+  }
+  @media screen and (max-width: 1440px) {
+    width: 80%;
+    margin-right: 0px;
   }
 }
