--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -37,3 +37,19 @@
     font-size: 18px;
   }
 }
+
+.terms__section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-self: center;
+  width: 60%;
+  height: 100%;
+  min-height: 350px;
+  font-family: yekan;
+  font-size: 18px;
+  direction: rtl;
+  .contact__terms{
+  }
+}
