--- a/src/components/Aside.scss
+++ b/src/components/Aside.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 25%;
   height: 66%;
   min-height: 650px;
@@ -11,13 +11,27 @@
   top: 0;
   margin-left: 10px;
   margin-top: 0.5rem;
-  background: linear-gradient(to bottom, #a9d0d7f2, #a9d0d70c);
+  background: white;
   border-radius: 5px;
+  .aside__title {
+    width: 100%;
+    text-decoration: none;
+    text-align: center; // Align placeholder text to the right
+    justify-self: center;
+    font-family: digikala;
+    top: 0;
+    font-size: 24px;
+    margin-top: 0rem;
+    padding-top: 0.5rem;
+    background: linear-gradient(to bottom, #b8e9ed, #a9d0d70c);
+    color: var(--navy-light);
+    border-radius: 5px;
+  }
   .box1,
   .box2 {
     position: relative;
     height: 50%;
-    min-height: 300px;
+    min-height: 250px;
     max-height: 300px;
     width: 90%;
     background-color: white;
@@ -27,8 +41,7 @@
   }
   @media screen and (max-width: 1448px) {
     display: flex;
-    flex-direction: row;
-
+    flex-direction: column;
     width: 60%;
     height: max-content;
     min-height: 350px;
@@ -39,8 +52,6 @@
   }
   @media screen and (max-width: 1120px) {
     display: flex;
-    flex-direction: row;
-
     width: 70%;
     height: max-content;
     min-height: 350px;
@@ -61,7 +72,6 @@
   @media screen and (max-width: 720px) {
     width: 70%;
     height: max-content;
-    flex-direction: column;
     min-height: 650px;
     div {
       height: 85%;
@@ -70,8 +80,9 @@
   }
   @media screen and (max-width: 500px) {
     width: 95%;
-    height: max-content;
-    min-height: 650px;
+    height: 66%;
+    margin-inline: 1rem;
+    padding-inline: 0rem;
     div {
       height: 85%;
       width: 90%;
