--- a/src/components/AsideRight.scss
+++ b/src/components/AsideRight.scss
@@ -11,7 +11,8 @@
   top: 0;
   margin-right: 10px;
   margin-top: 0.5rem;
-  background: linear-gradient(to bottom, #a9d0d7f2, #a9d0d70c);
+  background-color: white;
+  // background: linear-gradient(to bottom, #a9d0d7f2, #a9d0d70c);
   border-radius: 5px;
 
   .rightAside_title {
@@ -21,8 +22,11 @@
     justify-self: center;
     font-family: digikala;
     font-size: 24px;
-    margin-top: 0.5rem;
+    margin-top: 0rem;
+    padding-top: 0.5rem;
+    background: linear-gradient(to bottom, #b8e9ed, #a9d0d70c);
     color: var(--navy-light);
+    border-radius: 5px;
   }
 
   .ad__container {
