--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  background: linear-gradient(to bottom, #edd0e2, #e2f1f2);
+  background: linear-gradient(to bottom, #f5f6f7c7, #b8e9ed);
   width: 100%;
   height: 250px;
   min-height: 250px;
