--- a/src/components/TopProducts.scss
+++ b/src/components/TopProducts.scss
@@ -23,7 +23,8 @@
 .top__products_container {
   position: relative;
   width: 90%;
-  background: linear-gradient(to bottom, #a9d0d780, #a9d0d738);
+  background: white;
+  border-radius: 5px;
   .swiper {
     @media screen and (max-width: 500px) {
       width: 80%;
@@ -39,11 +40,10 @@
     .img__container_hero {
       display: flex;
       flex-direction: column;
-      background-color: var(--primary-white);
+      background-color: rgba(255, 255, 255, 0.233);
       height: 250px;
       max-width: 260px;
-      margin: 3rem;
-      padding: 2rem;
+      margin: 1rem;
       margin-inline: 0;
       justify-content: center;
       align-items: center;
@@ -67,7 +67,7 @@
 
       @media screen and (max-width: 500px) {
         max-width: 310px;
-        
+
         // img {
         //   width: 200px;
         //   max-height: 280px;
