--- a/src/components/Aside.scss
+++ b/src/components/Aside.scss
@@ -27,18 +27,55 @@
     color: var(--navy-light);
     border-radius: 5px;
   }
-  .box1,
-  .box2 {
-    position: relative;
-    height: 50%;
-    min-height: 250px;
-    max-height: 300px;
-    width: 90%;
-    background-color: white;
-    margin: 1rem;
-    border-radius: 5px;
-    padding: 0.75rem;
+  .aside_container {
+    .aside__title {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+  
+    .product__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 20px;
+      width: 100%;
+  
+      .main_image__container {
+        width: 100%;
+        text-align: center;
+  
+        .main_product__image {
+          max-width: 100%;
+          height: auto;
+          margin-bottom: 10px;
+        }
+      }
+  
+      .product__details {
+        text-align: center;
+  
+        .product__title {
+          margin: 10px 0;
+          font-size: 18px;
+          font-weight: bold;
+        }
+  
+        .product__discount {
+          display: inline-block;
+          margin-top: 5px;
+          padding: 5px 10px;
+          background-color: red;
+          color: white;
+          font-size: 14px;
+          border-radius: 5px;
+        }
+      }
+    }
   }
+  
+
   @media screen and (max-width: 1448px) {
     display: flex;
     flex-direction: column;
