--- a/src/components/LinkBox.scss
+++ b/src/components/LinkBox.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  padding-bottom: 6%;
   width: 45%;
   height: 66%;
   min-height: 650px;
@@ -70,7 +71,7 @@
   display: flex;
   flex-direction: column;
   width: 80%;
-  height: 10rem;
+  height: auto;
   margin-top: 2rem;
   div {
     display: flex;
@@ -139,6 +140,149 @@
   @media screen and (max-width: 480px) {
     div {
       font-size: 1.1rem;
+    }
+  }
+}
+
+.loading_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin: 4%;
+}
+
+.loading_spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  animation: spin 1s linear infinite;
+  margin-right: 10px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading_text {
+  font-size: 16px;
+  color: #3498db;
+  font-weight: bold;
+}
+.success_message {
+  width: 40%;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #ddffdd;
+  border: 2px solid #00ff00;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  border-radius: 5px;
+  text-align: center;
+  color: #008000;
+  font-weight: bold;
+  margin-top: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.results__message {
+  width: 40%;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffdddd;
+  border: 2px solid #ff0000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  border-radius: 5px;
+  text-align: center;
+  color: #ff0000;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.product__container {
+  display: flexbox;
+ background-color: #b8b8b83d;
+ border-radius: 10px;
+  margin: 5%;
+  padding: 3%;
+}
+.main_image__container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1rem;
+}
+
+.main_product__image {
+  width: 25%;
+  height: auto;
+}
+.product__title h2 {
+  padding: 2%;
+  flex-grow: 1; /* Allow title to take the remaining space */
+  margin: 2%; /* Remove default margin */
+  margin-top: 2%;
+  padding-top: 0;
+  font-size: 1.5em; /* Adjust font size as needed */
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 100;
+  font-size: medium;
+}
+.product__title h1 {
+  padding-left: 2%;
+  flex-grow: 1; /* Allow title to take the remaining space */
+  margin-left: 2%; /* Remove default margin */
+  font-size: 1rem; /* Adjust font size as needed */
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 200;
+}
+.product__descriptions {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 100;
+  font-size: small;
+}
+
+.image-gallery {
+  flex-wrap: wrap;
+}
+
+.image-gallery img {
+  max-width: 150px;
+  margin: 5px;
+}
+
+.add-to-basket__button {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+  button {
+    margin: 20px;
+    padding: 12px 24px;
+    background-color: var(--primary-yellow); /* Light blue */
+    color: var(--navy-navbar);
+    border: none;
+    border-radius: 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: rgb(231, 172, 96); /* Darker blue */
     }
   }
 }
